fixed overflow on landing page

--- a/src/components/routes/styles.css
+++ b/src/components/routes/styles.css
@@ -6,6 +6,10 @@ html, body {
     /* height: 100%; */
 }
 
+html {
+    overflow: hidden;
+}
+
 /* header and user video */
 #user-header {
     /* display: inline-flex; */
